# MarioMapMaker

./: CMakeLists.txt  CMakeUserPresets.json  clean.py  configure.py  install_dependencies.py
src/: main.cpp
